# wildfire

./: .gitmodules  CMakeLists.txt  README.md
config/: map_2.json
main/: CMakeLists.txt  main.cpp
main/include/: cell.hpp  logger.hpp  state.hpp
references/: behave_guide.pdfZone.Identifier
results/: Info_for_sample_results.txt  output_2.csv
wildfire_simulator_plugin/: __init__.py  plugin.py
